--- a/assets/css/componets/footerResponsivo.css
+++ b/assets/css/componets/footerResponsivo.css
@@ -14,7 +14,7 @@ background-color: #222;
   justify-content: center;
   align-items: center;
   width: 1170px;
-  border-bottom: 1px solid #c7c7c7 ;
+ 
   
 
   
@@ -109,7 +109,7 @@ margin-top: 80px;
 
 @media (max-width: 960px){
   
-    .tno-footer{
+    .tno-footer .wrapper h3{
 
       display: none;
   }
@@ -137,10 +137,7 @@ margin-top: 80px;
   padding-left: 0px;
 }
 
-.ul-footer .footer-img {
-  border-left: 0px solid #c7c7c7;
-  /* border-bottom: 1px solid #c7c7c7; */
-}
+
 
 .ul-footer ul li{
   border-bottom: 1px solid #2e2e2e
