--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -1,64 +1,224 @@
-
-.bg-total{
+.bg-total {
   background-color: #e61f22;
-  height:35px;
-  
+  height: 35px;
+
 }
 
-.nav-container .wrapper-ul{
-  
+.nav-container .wrapper-ul {
+
   width: 700px;
-  
+
 }
+
 .tno-header .nav-container {
   max-width: 1170px;
-  margin:0px auto;
+  margin: 0px auto;
 
 }
 
 .tno-header nav ul::after {
   content: '';
-    width: 80px;
-    height: 35px;
-     background: linear-gradient(to right,rgba(230, 31, 34, 0), #e61f22  100%);
-    position: sticky;
-    top: 8px;
-    right: -16px;
-   }
-
-
-  
-
-.tno-header{
-  padding: 0 auto;
-  display:flex;
-  flex-direction: column;
-  gap:12px;
-  position:relative;
-  
-  
+  width: 80px;
+  height: 35px;
+  background: linear-gradient(to right, rgba(230, 31, 34, 0), #e61f22 100%);
+  position: sticky;
+  top: 8px;
+  right: -16px;
 }
 
 
 
 
+.tno-header {
+  padding: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  position: relative;
 
-.tno-header > .wrapper{
-  margin:0 auto;
-  display:flex;
+}
+
+.tno-header>.wrapper {
+  margin: 0 auto;
+  display: flex;
   align-items: center;
   align-content: space-between;
   position: relative;
-}
-
-
-.tno-header > .wrapper > .svg-menu{
-background-size: 4px;
-color: #e61f22;
 
 }
 
-.tno-header > .wrapper > .menu{
+
+
+
+
+.menu-aside {
+  visibility: hidden;
+  width: 350px;
+  background: #fff;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 88%;
+  max-width: 350px;
+  padding-top: 9px;
+  height: 100vh;
+  overflow-x: hidden;
+  z-index: 2;
+  padding: 20px;
+}
+
+.menu-aside .menu-header .logo-menu-svg {
+  margin-left: 35px;
+  margin-top: 50px;
+}
+
+.menu-header span img {
+  position: absolute;
+  height: auto;
+  width: 25px;
+  margin-left: 30px;
+  display: block;
+  margin-top: -45px;
+  cursor: pointer;
+}
+
+.menu-aside .menu-social svg {
+  width: 100%;
+  height: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  color: #e61f22;
+
+}
+
+.menu-aside .menu-social {
+
+  display: flex;
+  align-items: center;
+  border-top: 0.5px solid #a9a9a9;
+
+  margin-top: 20px;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+
+}
+
+
+
+
+.menu-header .contato-menu a svg {
+
+  width: 20px;
+  color: #e61f22;
+  gap: 10px;
+
+
+
+
+
+}
+
+.menu-header .contato-menu .contato-menu-whats {
+  color: #333 !important;
+  align-items: center;
+  display: flex;
+  align-content: center;
+  font-size: 22px;
+  margin-left: 27px;
+  gap: 20px;
+  text-decoration: none;
+
+  text-transform: uppercase;
+
+
+}
+
+.menu-header .sac-menu {
+  margin-top: 30px;
+  border-top: 1px solid #a9a9a9;
+
+
+}
+
+.menu-header .sac-menu a {
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+  text-decoration: none;
+  text-transform: lowercase;
+  color: #333;
+  margin-top: 30px;
+  font-size: 16px;
+  margin-bottom: 30px;
+  font-family: 'Lato', sans-serif;
+
+
+}
+
+.menu-header .sac-menu a svg {
+  width: 20px;
+
+
+}
+
+
+.menu-header .contato-menu a {
+  text-decoration: none;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+  color: #333333;
+
+  margin-bottom: 20px;
+}
+
+.menu-header .contato-menu .ul-cat {
+  border-top: 1px solid #a9a9a9;
+
+}
+
+.menu-header .contato-menu .ul-cat ul {
+  text-transform: uppercase;
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.menu-header .contato-menu .ul-cat ul li {
+  margin-top: 20px;
+}
+
+div .wrapper .check-menu {
+  left: -127px;
+  flex-direction: column;
+  background-color: #262626;
+  width: 300px;
+  height: auto;
+  position: absolute;
+  z-index: 1;
+  top: 137px;
+}
+
+.wrapper label {
+  background: red;
+  padding: 15px;
+
+}
+
+
+.tno-header>.wrapper>.svg-menu {
+  background-size: 4px;
+  color: #e61f22;
+
+}
+
+
+
+.tno-header>.wrapper .menu {
   cursor: pointer;
   margin-left: 15px;
   margin-right: 30px;
@@ -66,10 +226,11 @@ color: #e61f22;
   color: #e61f22;
   font-family: 'Lato-bold', sans-serif;
   font-weight: 700;
-  
+
+
 }
 
-.tno-header  .wrapper > .busca{
+.tno-header .wrapper>.busca {
   cursor: pointer;
   margin-left: 15px;
   font-family: 'Lato-bold', sans-serif;
@@ -77,315 +238,362 @@ color: #e61f22;
   font-weight: 700;
 
 }
-  .tno-header  .wrapper .logo{
-    display:flex;
-    margin-left: 80px;
-    margin-right: 250px;
-    }
 
-.tno-header  .nav-container {
-  background: #e61f22;
-     display:flex;
-     align-items: center;
-     justify-content: space-between;
-     height:35px; 
+.tno-header .wrapper .logo {
+  display: flex;
+  margin-left: 80px;
+  margin-right: 250px;
 }
 
-    .tno-header  nav {
-      
-      margin: 0 auto;
-      position: relative;
-      
-      
-    }
-    .tno-header  nav  ul {
-
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap:10px;
-      margin-left: 30px;;
-      color: #fff;
-      background-size:0 auto;
-
-      
-      
-    }
-    .tno-header  nav  ul  li{
-      cursor: pointer;
-      color: #fff;
-      font-size: 12px;
-      line-height: 35px;
-      position:relative;
-      white-space: nowrap;
-      text-transform: uppercase;
-      font-family: 'Lato', sans-serif;
-      font-weight: 700;
-      
-    }
-
-    
-
-   .bg-uol{
-      display: flex;
-      background-color: #262626;
-      margin:0 auto;
-      height: 44px;
-    }
-    .bg-uol > .wrapper{
-      width:0 auto;
-    }
-    .ed-impresso a{
-      display:flex;
-      font-family: 'Lato-bold', sans-serif;
-      font-size:13px;
-      font-weight: 700;
-      text-decoration: none;
-      align-items: center;
-      justify-content: center;
-      vertical-align: middle;
-      color: #333;
-      flex-wrap: wrap;
-    }
-    
-    .ed-impresso .arrow-up{
-      border-left: 8px solid transparent;
-      border-right: 8px solid transparent;
-      border-bottom: 8px solid #000;
-      position: absolute;
-      left: calc(50% - 8px);
-      top: 3px;
-      z-index: 1;
-
-    }
-
-    .ed-impresso .mini-tooltip{
-      max-width:50px;
-      height: auto;
-      margin-right:10px;
-    }
-
-    .ed-impresso .mini-tooltip:hover .ed-impresso .med-tooltip {
-     visibility: visible;
-    }
-
-    .ed-impresso .med-tooltip{
-      visibility: hidden;
-      right: -40px;
-    top: 90px;
-    background: #e02525;
-    position: absolute;
-    z-index: 1;
-    right: 100px;
-    border: 5px solid #e61f22;
-    border-radius: 10px;
-    }
-
-    
-
-
-
-
-
-   
-
-    .nav-container .previsao b{
-      font-family: 'Lato', sans-serif;
-      text-transform: uppercase;
-      color: #fff;
-      font-size: 11px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding-right: 15px;
-    }
-    .nav-container .previsao .previsao-sun{
-      display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    width: auto;
-    height: 25px;
-    color: #fff;
-    padding-right: 10px;
-    }
-
-    .nav-container .previsao {
-      display: flex;
-      align-items: center;
-      align-content: center;
-      color:#fff;
-      width: 500px;
-      margin-left: 190px;
-      cursor:pointer;
-      
-    }
-    .nav-container .previsao .previsao-graus{
-     
-      padding-right: 10px;
-    }
-    .nav-container .previsao .euro{
-      font-family: 'Lato', sans-serif;
-      padding-right: 10px;
-      font-size:12px;
-    }
-    .nav-container .previsao .euro-valor{
-      font-family: 'Lato', sans-serif;
-      font-weight: 700;
-    }
-    .nav-container .previsao .dolar{
-      font-family: 'Lato', sans-serif;
-      font-size:12px;
-    }
-    .nav-container .previsao .dolar-valor{
-      font-family: 'Lato', sans-serif;
-      font-weight: 700;
-
-    }
-
-    .nav-container .previsao .dolar-svg{
-      border-left: 1px solid;
-      padding-left: 10px;
-      height: 25px;
-      width: auto;
-      margin-right: 10px;
-      
-    }
-    
-    .nav-container .previsao .euro-svg{
-      border-left: 1px solid;
-      padding-left: 10px;
-      height: 25px;
-      width: auto;
-      margin-right: 10px;
-      
-    }
-
-.tno-header .wrapper .container-mais-lidas{
-  display:flex;
-  align-content:center ;
+.tno-header .nav-container {
+  background: #e61f22;
+  display: flex;
   align-items: center;
-  flex-direction:column;
+  justify-content: space-between;
+  height: 35px;
+}
+
+.tno-header nav {
+
+  margin: 0 auto;
+  position: relative;
+
+
+}
+
+.tno-header nav ul {
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  margin-left: 30px;
+  ;
+  color: #fff;
+  background-size: 0 auto;
+
+
+
+}
+
+.tno-header nav ul li {
+  cursor: pointer;
+  color: #fff;
+  font-size: 12px;
+  line-height: 35px;
+  position: relative;
+  white-space: nowrap;
+  text-transform: uppercase;
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+
+}
+
+
+
+.bg-uol {
+  display: flex;
+  background-color: #262626;
+  margin: 0 auto;
+  height: 44px;
+}
+
+.bg-uol>.wrapper {
+  width: 0 auto;
+}
+
+.ed-impresso a {
+  display: flex;
+  font-family: 'Lato-bold', sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  color: #333;
+  flex-wrap: wrap;
+}
+
+.ed-impresso .arrow-up {
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid #000;
+  position: absolute;
+  left: calc(50% - 8px);
+  top: 3px;
+  z-index: 1;
+
+}
+
+.ed-impresso .mini-tooltip {
+  max-width: 50px;
+  height: auto;
+  margin-right: 10px;
+}
+
+div.ed-impresso:hover span img {
+  visibility: visible !important;
+
+}
+
+.ed-impresso .med-tooltip {
+  visibility: hidden;
+  right: -40px;
+  top: 90px;
+  background: #e02525;
+  position: absolute;
+  z-index: 1;
+  right: 100px;
+  border: 5px solid #e61f22;
+  border-radius: 10px;
+}
+
+
+
+
+
+
+.nav-container .previsao b {
+  font-family: 'Lato', sans-serif;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 11px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-right: 15px;
+}
+
+.nav-container .previsao .previsao-sun {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  width: auto;
+  height: 25px;
+  color: #fff;
+  padding-right: 10px;
+}
+
+.nav-container .previsao {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  color: #fff;
+  width: 500px;
+  margin-left: 190px;
+  cursor: pointer;
+
+}
+
+.nav-container .previsao .previsao-graus {
+
+  padding-right: 10px;
+}
+
+.nav-container .previsao .euro {
+  font-family: 'Lato', sans-serif;
+  padding-right: 10px;
+  font-size: 12px;
+}
+
+.nav-container .previsao .euro-valor {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+}
+
+.nav-container .previsao .dolar {
+  font-family: 'Lato', sans-serif;
+  font-size: 12px;
+}
+
+.nav-container .previsao .dolar-valor {
+  font-family: 'Lato', sans-serif;
+  font-weight: 700;
+
+}
+
+.nav-container .previsao .dolar-svg {
+  border-left: 1px solid;
+  padding-left: 10px;
+  height: 25px;
+  width: auto;
+  margin-right: 10px;
+
+}
+
+.nav-container .previsao .euro-svg {
+  border-left: 1px solid;
+  padding-left: 10px;
+  height: 25px;
+  width: auto;
+  margin-right: 10px;
+
+}
+
+.tno-header .wrapper .container-mais-lidas {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
   border-right: 1px solid #a9a9a9;
   padding-right: 30px;
-  
+
 }
+
 .tno-header .wrapper .container-mais-lidas span {
   font-family: 'Lato', sans-serif;
-  font-size:12px;
+  font-size: 12px;
   font-weight: 700;
-  margin-bottom:10px;
-  margin-top:4px;
-  color:#000;
-  
+  margin-bottom: 10px;
+  margin-top: 4px;
+  color: #000;
+
 }
-.tno-header .wrapper .container-mais-lidas a{
+
+.tno-header .wrapper .container-mais-lidas a {
   text-decoration: none;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  font-size:10px;
+  font-size: 10px;
   color: #a9a9a9;
   border: 1px solid #a9a9a9;
   border-radius: 6px;
   padding: 4px 30px;
-  margin-bottom:10px;
+  margin-bottom: 10px;
 }
-.tno-header  .wrapper ul {
-  display:flex;
-  align-content: space-between;
-  align-items:start;
-  }
 
-.tno-header  .wrapper ul li {
-  display:flex;
+
+.tno-header .wrapper .ul-maislidas {
+  font-family: 'Lato', sans-serif;
+  font-size: 13px;
+
+}
+
+
+
+.tno-header .wrapper ul {
+  display: flex;
+  align-content: space-between;
+  align-items: start;
+}
+
+.tno-header .wrapper ul li {
+  display: flex;
   align-content: space-between;
   align-items: center;
-  position:relative;
+  position: relative;
   width: 160px;
   padding-left: 20px;
-  cursor:pointer;
+  cursor: pointer;
   padding-right: 10px;
- }
+  line-height: 1.4;
+}
 
- .tno-header  .wrapper ul li a{
+.tno-header .wrapper ul li a {
   text-decoration: none;
-  display:flex;
+  display: flex;
   align-content: space-between;
   align-items: center;
   font-family: 'Lato', sans-serif;
- }
+}
 
 
- .tno-header  .wrapper ul p{
-  font-size:80px;
+.tno-header .wrapper ul p {
+  font-size: 80px;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  /* color:#a9a9a9; */
-  
-  margin-left:-10px;
-  cursor:pointer;
-  margin-top:-10px;
-  position:relative;
-
-
+  margin-left: -10px;
+  cursor: pointer;
+  margin-top: -10px;
+  position: relative;
   background-image: linear-gradient(to top, #fff, #bbb);
-  
-  /* Segundo passo: apagar do fundo tudo que não estiver imediatamente atrás de texto */
   background-clip: text;
-  -webkit-background-clip: text; /* Alguns navegadores precisam do prefixo */
-
-  /* Terceiro passo: apagar o texto, deixando apenas o fundo atrás dele */
+  -webkit-background-clip: text;
+  /* Alguns navegadores precisam do prefixo */
   -webkit-text-fill-color: transparent;
-
-  /* Cor que contraste com o degradê, caso o navegador não suporte `background-clip: text` */
   color: black;
+}
 
 
-  
- }
+/* final do menu responsivo */
+div .menu-responsivo {
+  display: none;
+}
 
 
- @media (max-width: 1150px){
-  .tno-header  .wrapper .container-mais-lidas{
-    display:none;}
 
-    .tno-header  .wrapper .ul-maislidas {
-      display:none;}
+@media (max-width: 1150px) {
+  .tno-header .wrapper .container-mais-lidas {
+    display: none;
+  }
 
-
-      .tno-header .ed-impresso{
-        display:none;
-      }
-
-      .nav-container .previsao{
-        margin-right: auto;
-      }
-
- }
+  .tno-header .wrapper .ul-maislidas {
+    display: none;
+  }
 
 
- @media (max-width: 720px){
-  
+  .tno-header .ed-impresso {
+    display: none;
+  }
+
+  .nav-container .previsao {
+    margin-right: auto;
+  }
+
+
+  /* MENU - ASIDE */
+
+  .menu-aside .menu-header .logo-menu-svg {
+    width: 30px;
+    margin-left: 5px;
+    margin-top: 5px;
+  }
+
+  .menu-header .sac-menu a {
+    display: nne;
+  }
+
+  .menu-aside {
+    width: 100%;
+    max-width: 100%;
+  }
+
+
+  .menu-aside .menu-social {
+    border-top: transparent;
+  }
+
+  .menu-aside .menu-social {
+    display: nne;
+  }
+
+}
+
+@media (max-width: 720px) {
+
   .tno-header .wrapper {
     display: flex;
     align-content: space-between;
-   align-items: center;
-flex-direction: row-reverse;
-width:100%;
+    align-items: center;
+    flex-direction: row-reverse;
+    width: 100%;
   }
 
-  .nav-container{
-   overflow: auto;
+  .nav-container {
+    overflow: auto;
   }
-  .wrapper{
+
+  .wrapper {
     display: flex;
     align-items: center;
     align-content: space-between;
     padding-right: 0px;
-   
+
   }
- 
-  .tno-header  .nav-container{
+
+  .tno-header .nav-container {
     display: flex;
     align-items: center;
     align-content: space-between;
@@ -393,57 +601,98 @@ width:100%;
 
 
 
-  .tno-header .wrapper .logo img{
-  max-width: 100px;
-  max-height:40px;
- 
-  
-    }
-    .tno-header .wrapper .logo-bg{
-    height:0px auto;
-    width:100px;
+  .tno-header .wrapper .logo img {
+    max-width: 100px;
+    max-height: 40px;
+
+
+  }
+
+  .tno-header .wrapper .logo-bg {
+    height: 0px auto;
+    width: 100px;
     margin-right: auto;
-    }
-   
+  }
 
 
- .tno-header  .wrapper a{
-  display:none;
 
- }
- .tno-header  .wrapper .img-bottom{
-  display: flex;
-  margin-right: 10px
-;
+  .tno-header .wrapper a {
+    display: none;
+
+  }
+
+  .tno-header .wrapper .img-bottom {
+    display: flex;
+    margin-right: 10px;
 
 
- }
- .tno-header  .wrapper input{
-  display:none;
- }
+  }
 
- .tno-header  .wrapper a img{
-  display:flex !important;
- }
+  .tno-header .wrapper input {
+    display: nne;
+  }
 
- .tno-header  nav  ul {
-  margin-left:0px;
- 
+  .tno-header .wrapper a img {
+    display: flex !important;
+  }
+
+  .tno-header nav ul {
+    margin-left: 0px;
+
+  }
+
+  .nav-container .previsao {
+    display: none;
+  }
+
+  .tno-header .wrapper .logo-bg {
+    margin-left: -80px;
+  }
+
+  div .menu-responsivo {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    margin-top: 30px;
+    flex-direction: column;
+    align-content: center;
+  }
+
+  .menu-aside .menu-responsivo-social {
+    display: flex;
+    align-items: center;
+    border-top: 0.5px solid #a9a9a9;
+    margin-top: 20px;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    position: relative;
+    top: 615px;
+  }
+
+  .menu-header .sac-menu {
+    display: none;
+  }
+
+  .menu-header .contato-menu .contato-menu-whats {
+    position: relative;
+    top: 570px;
+    left: 65px;
+    position: relative;
+
+  }
+
+  .menu-header .contato-menu .ul-cat {
+    border-top: transparent;
+
+    margin-top: -70px;
+  }
+
+  .menu-aside .menu-social {
+    position: relative;
+    top: 560px;
+  }
+
 }
-
- .nav-container .previsao{
-  display:none;
- }
-
- .tno-header .wrapper .logo-bg {
-  margin-left:-80px;
- }
-
- 
-
-
-
-}
-
-
-
