--- a/assets/css/componets/footerResponsivo.css
+++ b/assets/css/componets/footerResponsivo.css
@@ -24,7 +24,7 @@ background-color: #222;
   margin-bottom: 20px;
   color:#fff;
 }
-.tno-footer .footer-social svg{
+.tno-footer .footer-social img{
   color:#fff;
   width: 25px;
   height: 25px;
