--- a/apuracana.css
+++ b/apuracana.css
@@ -324,8 +324,9 @@ margin-bottom:30px;
   }
   .apucarana-news .wrapper .content-1 img{
   border-radius: 6px;
-  height: 55%;
-  width: 55%;
+  height: auto;
+    width: 42vh;
+  
   margin-left: 15px;
   }
 
@@ -369,5 +370,8 @@ margin-bottom:30px;
   }
   .apucarana-news .wrapper .categorias-relacionadas a{
     line-height: 3;
+  }
+  .apucarana-news .wrapper .article-paragraphs{
+    width:0px;
   }
 }
