--- a/apuracana.css
+++ b/apuracana.css
@@ -315,13 +315,14 @@ margin-bottom:30px;
     margin-left: 10px;
   }
   .apucarana-news .wrapper  span{
-    margin-top:10px;
+    margin-top:3px;
   }
   .apucarana-news .wrapper .content-1{
     background:none; 
     border: none;
     border-radius:4px;
-    margin-top:30px;
+    margin-top:20px;
+    margin-bottom: 20px;
   
   }
   .apucarana-news .wrapper .content-1 img{
@@ -415,12 +416,24 @@ margin-bottom:30px;
   .apucarana-news .wrapper .google-news-mobile img{
     height: 30px;
   }
- 
+  .apucarana-news .wrapper .article-who-mobile {
+    margin-left: 0px;
+    display: grid;
+    margin-bottom: 10px;
+  }
+
+  .apucarana-news .wrapper .aticle.publish{
+    display: none;
+  }
+
+
 
 }
 
 @media (min-width: 720px){
   .apucarana-news .wrapper .google-news-mobile{
-    display: none;
+    display: none;}
+    .apucarana-news .wrapper .article-who-mobile {
+      display: none;
+    }
   }
-}
