--- a/apuracana.css
+++ b/apuracana.css
@@ -59,7 +59,7 @@ vertical-align: middle;
 .apucarana-news .wrapper .article-subheader{
   font-family: "lato-bold",sans-serif;
   text-transform: uppercase;
-  color:#a9a9a9;
+  color:#8c8c8c;
   font-size: 16px;
   
   margin-bottom: 10px;
