--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -443,7 +443,7 @@ div.ed-impresso:hover span img {
   align-content: center;
   align-items: center;
   flex-direction: column;
-  border-right: 1px solid #a9a9a9;
+  border-right: 1px solid #8c8c8c;
   padding-right: 30px;
 
 }
@@ -454,7 +454,7 @@ div.ed-impresso:hover span img {
   font-weight: 700;
   margin-bottom: 10px;
   margin-top: 4px;
-  color: #000;
+  color:#333;
 
 }
 
