--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -38,7 +38,7 @@
 
 }
 
-.tno-header>.wrapper {
+.tno-header .wrapper {
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -630,6 +630,8 @@ div .menu-responsivo {
   .tno-header .wrapper .img-bottom {
     display: flex;
     margin-right: 10px;
+    height: 50px;
+    width:20px;
 
 
   }
