--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -532,7 +532,8 @@ div .menu-responsivo {
 
 
 
-@media (max-width: 1150px) {
+@media (max-width: 1150px)
+ {
 
   .nav-container .previsao{
     display:none;
@@ -580,10 +581,20 @@ div .menu-responsivo {
   .menu-aside .menu-social {
     display: nne;
   }
+  .tno-header .wrapper .logo {
+    display: flex;
+    margin-left: 0px;
+    margin-right:0px;
+  }
 
 }
 
 @media (max-width: 720px) {
+  .tno-header .wrapper .logo {
+    display: flex;
+    margin-left: 80px;
+    margin-right: 250px;
+  }
 
   .tno-header .wrapper {
     display: flex;
