--- a/apuracana.css
+++ b/apuracana.css
@@ -1,5 +1,5 @@
 main {display: grid;
-grid-template-columns: repeat(3,1fr);
+grid-template-columns: repeat(1,1fr);
 column-gap: 40px;
 max-width: 1170px;
 margin: 0 auto;}
@@ -178,8 +178,9 @@ px
 }
 .apucarana-news .wrapper .content-1 img{
 border-radius: 4px;
-height: 655px;
-    width: 837px;
+height: 100%;
+    width: 100%;
+    max-width: 1170px;
 }
 .apucarana-news .wrapper .content-1 span{
   padding: 5px 12px 0;
@@ -249,14 +250,7 @@ margin-bottom:30px;
   font-style:normal;
 }
 
-.apucarana-news .wrapper .wrapper-content{
-  max-width: 80%;
-}
 
-.apucarana-news .wrapper .article-paragraphs{
-  width: 855px;
- 
-}
 .apucarana-news .wrapper .article-paragraphs p{
   line-height: 32px;
   font-family: "lato",sans-serif;
@@ -307,7 +301,10 @@ margin-bottom:30px;
   }
 
 
-
+  @media (max-width: 1150px)
+  {.tno-header .subpage-bg .subpage-wrapper{
+  position: inherit;
+  }}
 
   @media (max-width: 720px){
 
@@ -353,12 +350,13 @@ margin-bottom:30px;
   
   }
   .apucarana-news .wrapper .content-1 img{
-  border-radius: 6px;
-  height: auto;
-  height: 260px;
-  width: 350px;
   
-  margin-left: 15px;
+  border-radius: 4px;
+  height: 100%;
+  width: 100%;
+  max-width: 1170px;
+  
+  margin-left: 0px;
   }
 
   
@@ -419,7 +417,7 @@ margin-bottom:30px;
 
   .apucarana-news .wrapper .google-news-mobile{
     width: 300px;
-    margin-left: 52px;
+    margin-left: 10px;
     margin-bottom: 0px;
     margin-top: 30px;
     border: 1px solid #a9a9a9;
