--- a/apuracana.css
+++ b/apuracana.css
@@ -441,6 +441,7 @@ margin-bottom:30px;
   }
   .apucarana-news .wrapper .google-news-mobile img{
     height: 30px;
+    width:30px;
   }
   .apucarana-news .wrapper .article-who-mobile {
     margin-left: 0px;
