--- a/apuracana.css
+++ b/apuracana.css
@@ -68,7 +68,7 @@ vertical-align: middle;
 .apucarana-news .wrapper .article-subheader{
   font-family: "lato-bold",sans-serif;
   text-transform: uppercase;
-  color:#8c8c8c;
+  color:#5b5b5b;
   font-size: 16px;
   
   margin-bottom: 10px;
@@ -184,17 +184,17 @@ height: 100%;
 }
 .apucarana-news .wrapper .content-1 span{
   padding: 5px 12px 0;
-  color: #8c8c8c;
+  color: #5b5b5b;
 }
 .apucarana-news .wrapper span {
   font-size: 14px;
   font-family: "lato-bold",sans-serif;
-  color:#8c8c8c;
+  color:#5b5b5b;
 }
 
 .apucarana-news .wrapper  strong{
   font-weight: 700;
-  color:#8c8c8c !important;
+  color:#5b5b5b !important;
 }
 
 .apucarana-news .wrapper  .article.autores span{
@@ -284,7 +284,7 @@ margin-bottom:30px;
   }
   .apucarana-news .wrapper .categorias-relacionadas a{
     text-decoration: none;
-    color: #8c8c8c ;
+    color: #5b5b5b ;
     font-family: "lato",sans-serif;
     font-weight: 300;
     border: 1px solid #a9a9a9 ;
