--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -1,3 +1,24 @@
+@font-face {
+  font-family: lato-bold;
+  src: url(/fonts/Lato-Bold.ttf);
+}
+@font-face {
+  font-family: lato-regular;
+  src: url(/fonts/Lato-Regular.ttf);
+}
+@font-face {
+  font-family: lato-light;
+  src: url(/fonts/Lato-Light.ttf);
+}
+@font-face {
+  font-family: lato-thin;
+  src: url(/fonts/Lato-Thin.ttf);
+}
+@font-face {
+  font-family: lato-black;
+  src: url(/fonts/Lato-Black.ttf);
+}
+
 .bg-total {
   background-color: #e61f22;
   height: 35px;
@@ -319,7 +340,7 @@ div .wrapper .check-menu {
   display: flex;
   font-family: 'Lato-bold', sans-serif;
   font-size: 13px;
-  font-weight: 700;
+  
   text-decoration: none;
   align-items: center;
   justify-content: center;
