font display swap lcp

--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -1,22 +1,27 @@
 @font-face {
   font-family: lato-bold;
   src: url(/fonts/Lato-Bold.ttf);
+  font-display: swap
 }
 @font-face {
   font-family: lato-regular;
   src: url(/fonts/Lato-Regular.ttf);
+  font-display: swap
 }
 @font-face {
   font-family: lato-light;
   src: url(/fonts/Lato-Light.ttf);
+  font-display: swap
 }
 @font-face {
   font-family: lato-thin;
   src: url(/fonts/Lato-Thin.ttf);
+  font-display: swap
 }
 @font-face {
   font-family: lato-black;
   src: url(/fonts/Lato-Black.ttf);
+  font-display: swap
 }
 
 .bg-total {
