--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -1,27 +1,27 @@
 @font-face {
-  font-family: lato-bold;
-  src: url(/fonts/Lato-Bold.ttf);
-  font-display: swap
+  font-family: 'lato-bold';
+  src: url('/fonts/Lato-Bold.woff') format('woff');
+  font-display:swap
 }
 @font-face {
-  font-family: lato-regular;
-  src: url(/fonts/Lato-Regular.ttf);
+  font-family: 'lato-regular';
+  src: url('/fonts/Lato-Regular.woff') format('woff');
   font-display: swap
 }
 @font-face {
   font-family: lato-light;
-  src: url(/fonts/Lato-Light.ttf);
+  src: url('/fonts/Lato-Light.woff') format('woff');
   font-display: swap
 }
 @font-face {
   font-family: lato-thin;
-  src: url(/fonts/Lato-thin.ttf);
+  src: url('/fonts/Lato-Light.woff') format('woff');
   font-display: swap
 }
 
 @font-face {
   font-family: lato-black;
-  src: url(/fonts/Lato-Black.ttf);
+  src: url('/fonts/Lato-Black.woff') format('woff');
   font-display: swap
 }
 
