--- a/apuracana.css
+++ b/apuracana.css
@@ -257,7 +257,9 @@ margin-bottom:30px;
 
 .apucarana-news .wrapper .article-paragraphs p{
   line-height: 32px;
-  font-family: "lato-light",sans-serif;
+  font-family: "lato",sans-serif;
+  font-weight: 300;
+    font-style: normal;
   
   font-size: 22px;
  color: #333;
