--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
   font-family: 'Lato-bold';
   src: url('/fonts/Lato-Bold.woff') format('woff');
   font-display: swap;}
@@ -25,7 +25,7 @@
   font-family: 'Lato-black';
   src: url('/fonts/Lato-Black.woff') format('woff');
   font-display: swap;
-} */
+}
 
 .bg-total {
   background-color: #e61f22;
