--- a/apuracana.css
+++ b/apuracana.css
@@ -300,7 +300,8 @@ margin-bottom:30px;
     background: #a9a9a9; 
   }
   .apucarana-news .wrapper .categorias-relacionadas h3{
-    margin-bottom: 20px;;
+    margin-bottom: 20px;
+   color: #5b5b5b;
   }
 
 
