--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -503,8 +503,8 @@ div.ed-impresso:hover span img {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
   font-size: 10px;
-  color: #a9a9a9;
-  border: 1px solid #a9a9a9;
+  color:#5b5b5b;
+  border: 1px solid #5b5b5b;
   border-radius: 6px;
   padding: 4px 30px;
   margin-bottom: 10px;
