--- a/assets/css/componets/topresponsivo.css
+++ b/assets/css/componets/topresponsivo.css
@@ -73,7 +73,7 @@
   align-content: space-between;
   position: relative;
   position: relative;
-    right: 35px;
+  right: 30px;
 
 }
 
@@ -486,7 +486,7 @@ div.ed-impresso:hover span img {
   flex-direction: column;
   border-right: 1px solid #8c8c8c;
   padding-right: 20px;
-  margin-left: 70px;
+  margin-left: 60px;
 }
 
 .tno-header .wrapper .container-mais-lidas span {
@@ -515,7 +515,8 @@ div.ed-impresso:hover span img {
 .tno-header .wrapper .ul-maislidas {
   font-family: 'Lato', sans-serif;
   font-size: 13px;
-
+  margin-top: -10px;
+  margin-bottom: -10px;
 }
 
 
@@ -531,7 +532,7 @@ div.ed-impresso:hover span img {
   align-content: space-between;
   align-items: center;
   position: relative;
-  width: 160px;
+  width: 170px;
   padding-left: 20px;
   cursor: pointer;
   
@@ -551,9 +552,7 @@ div.ed-impresso:hover span img {
   font-size: 80px;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  
   cursor: pointer;
- 
   position: relative;
   background-image: linear-gradient(to top, #fff, #bbb);
   background-clip: text;
@@ -561,6 +560,8 @@ div.ed-impresso:hover span img {
   /* Alguns navegadores precisam do prefixo */
   -webkit-text-fill-color: transparent;
   color: black;
+  margin-left: -10px;
+    z-index: -1;
 }
 
 
