--- a/apuracana.css
+++ b/apuracana.css
@@ -318,7 +318,6 @@ margin-bottom:30px;
     font-family: "lato",sans-serif;
     font-weight: 300;
     border: 1px solid #a9a9a9 ;
-
     padding:8px;
     border-radius:4px;
     font-size: 12px;
@@ -602,6 +601,15 @@ margin-bottom:30px;
     .tno-header .subpage-bg .subpage-wrapper{
   position: inherit;
   }
+  .apucarana-news .wrapper .article-header{
+    max-width: 720px;
+  }
+  .apucarana-news .wrapper .article-lead{
+    max-width: 720px;
+  }
+  .apucarana-news .wrapper .content-1 img{
+    max-width: 855px;
+  }
 }
 
   @media (max-width: 720px){
@@ -630,6 +638,7 @@ margin-bottom:30px;
     width: 90vw;
     margin-left: 10px;
     font-size: 19px;
+    font-family: 'lato-bold',sans-serif;
   }
   
 
@@ -649,12 +658,10 @@ margin-bottom:30px;
   }
   .apucarana-news .wrapper .content-1 img{
   
-  border-radius: 4px;
-  height: 100%;
-  width: 100%;
-  max-width: 1170px;
-  
-  margin-left: 0px;
+    border-radius: 4px;
+    height: 100%;
+    width: 100%;
+    
   }
 
   
@@ -665,7 +672,7 @@ margin-bottom:30px;
     margin-left: 10px;
   }
   .apucarana-news .wrapper .article-paragraphs p{
-    width: 43vh;
+    
     font-size: 16px;
     margin-left: 10px;
   
@@ -699,24 +706,34 @@ margin-bottom:30px;
     margin-left: 10px;
   }
   .apucarana-news .wrapper .categorias-relacionadas{
-    width: 40vh;
+    max-width: max-content;
   }
   .apucarana-news .wrapper .categorias-relacionadas a{
     line-height: 3;
+    color: #e61f22;
+    font-family: 'lato-black';
+    border-radius: 8px;
   }
 
   .apucarana-news .wrapper .categorias-relacionadas{
-    margin-left:10px;
+    
+    margin-left: 10px;
+    max-width: 340px;
+   
   }
   .apucarana-news .wrapper .article-paragraphs{
-    width:0px;
-    margin-top: -90px;
+    max-width: 400px;
+    width: 100%;
+    height: 100%;
+  }
+  .apucarana-news .wrapper .categorias-relacionadas .categorias-procure{
+    display:none;
+  }
+  .apucarana-news .wrapper .categorias-relacionadas {
+    border-bottom: none;;
   }
 
   .apucarana-news .wrapper .google-news-mobile{
-    width: 300px;
-    margin-left: 10px;
-    margin-bottom: 0px;
     margin-top: 30px;
     border: 1px solid #a9a9a9;
     width: 300px;
@@ -724,12 +741,13 @@ margin-bottom:30px;
     padding: 10px;
     vertical-align: middle;
     margin-bottom: 40px;
+    margin-left: 50px;
   }
   .apucarana-news .wrapper .google-news-mobile a{
     text-decoration: none;
     color: #333;
     font-size: 16px;
-    font-family: "lato-bold",sans-serif;
+    font-family: "lato-black",sans-serif;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -750,8 +768,83 @@ margin-bottom:30px;
   .apucarana-news .wrapper .article-publish{
     display: none;
   }
+  .apucarana-news .wrapper .anuncie-border{
+    display:none;
+  }
+  .apucarana-news .wrapper .categorias-social{
+    display:none;
+  }
+  .apucarana-news .wrapper .mais-materias{
+    display:none;
+  }
+  .apucarana-news .wrapper .meus-comentarios h4{
+    
+    word-break: break-word;
+    font-size: 18px;
+    width: 100%;
+    display: inline-block;
+    color: #1c1c1c;
+    margin-left: 10px;
+  }
+  .apucarana-news .wrapper .meus-comentarios span{
+    color:#1c1c1c;
+  }
+  .apucarana-news .wrapper small{
 
-  
+    color: rgb(51, 51, 51);
+    max-width: 400px;
+    border: none;
+    padding: 15px;
+    border-radius: 5px;
+    height: 100%;
+    width: 100%;
+    font-size: 14px;
+    font-family: 'lato',sans-serif;
+    line-height: 1.42857;
+  }
+  .apucarana-news .wrapper .button-comentarios{
+    margin:10px;
+  }
+  .apucarana-news .wrapper .button-comentarios button{
+    text-transform: uppercase;
+    background: #e61f22;
+    color: #fff;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+    font-family: 'lato', sans-serif;
+    border-radius: 8px;
+    padding: 5px;
+  }
+.trib-play {
+  display: none;
+}
+.apucarana-news .wrapper .trib-content {
+  display: none;
+}
+.apucarana-news .wrapper .button-noticias a button {
+  display:none;
+}
+.apucarana-news .wrapper .trib-content-1{
+  display:none;
+}
+.apucarana-news .wrapper .trib-play-noticias{
+  display:none;
+}
+.apucarana-news .wrapper .uol-tmtitle{
+  border: none;;
+}
+
+.apucarana-news .wrapper .uol-tmtitle h2{
+ 
+  margin-left: 10px;
+  width: 100%;
+}
+
+
+
 
 }
 
