--- a/apuracana.css
+++ b/apuracana.css
@@ -612,7 +612,7 @@ margin-bottom:30px;
   }
 }
 
-  @media (max-width: 720px){
+  @media (max-width: 820px){
 
   .tno-header .subpage-bg .subpage-wrapper {
     right: 0px;
@@ -841,9 +841,15 @@ margin-bottom:30px;
   margin-left: 10px;
 }
 
-
-
-
+.apucarana-news .wrapper .article-paragraphs p b{
+  display:none;
+}
+.apucarana-news .wrapper .meus-comentarios h4{
+  margin-top:0px;
+}
+.apucarana-news .wrapper .categorias-relacionadas{
+  padding-bottom:0px;
+}
 }
 
 @media (min-width: 720px){
